--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -49,12 +49,15 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "open-color": "^1.4.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-actions": "^1.2.1"
+    "redux-actions": "^1.2.1",
+    "semantic-ui-css": "^2.2.4",
+    "semantic-ui-react": "^0.64.7"
   },
   "scripts": {
     "start": "node scripts/start.js",
