--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -49,6 +49,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "include-media": "^1.4.9",
     "open-color": "^1.4.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
