--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -58,7 +58,8 @@
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "semantic-ui-css": "^2.2.4",
-    "semantic-ui-react": "^0.64.7"
+    "semantic-ui-react": "^0.64.7",
+    "weather-icons": "^1.3.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
