--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -50,6 +50,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "firebase": "^3.6.9",
     "include-media": "^1.4.9",
     "open-color": "^1.4.2",
     "react": "^15.4.2",
@@ -58,6 +59,8 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
+    "redux-logger": "^2.8.1",
+    "redux-promise-middleware": "^4.2.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.64.7",
     "weather-icons": "^1.3.2"
