--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -50,7 +50,9 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "firebase": "^3.6.9",
+    "immutable": "^3.8.1",
     "include-media": "^1.4.9",
     "open-color": "^1.4.2",
     "react": "^15.4.2",
@@ -63,6 +65,7 @@
     "redux-promise-middleware": "^4.2.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.64.7",
+    "urlencode": "^1.1.0",
     "weather-icons": "^1.3.2"
   },
   "scripts": {
