--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -33,6 +33,7 @@
     "jest": "17.0.2",
     "json-loader": "0.5.4",
     "node-sass": "^4.5.0",
+    "nodemon": "^1.11.0",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
@@ -50,10 +51,14 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1",
     "firebase": "^3.6.9",
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
     "open-color": "^1.4.2",
+    "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -62,7 +67,6 @@
     "redux-actions": "^1.2.1",
     "redux-logger": "^2.8.1",
     "redux-promise-middleware": "^4.2.0",
-    "request": "^2.79.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.64.7",
     "urlencode": "^1.1.0",
