Weather Detail gradient modified

--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -53,9 +53,9 @@
     "axios": "^0.15.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
-    "firebase": "^3.6.9",
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
+    "mongoose": "^4.8.4",
     "open-color": "^1.4.2",
     "path": "^0.12.7",
     "react": "^15.4.2",
