--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -68,8 +68,7 @@
     "redux-promise-middleware": "^4.2.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.64.7",
-    "urlencode": "^1.1.0",
-    "weather-icons": "^1.3.2"
+    "urlencode": "^1.1.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
