--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "immutable": "^3.8.1",
