--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -54,6 +54,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "express-session": "^1.15.1",
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
     "mongoose": "^4.8.4",
