--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -58,6 +58,7 @@
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
     "mongoose": "^4.8.4",
+    "morgan": "^1.8.1",
     "open-color": "^1.4.2",
     "path": "^0.12.7",
     "react": "^15.4.2",
