--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -8,6 +8,7 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
     "babel-loader": "6.2.7",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -71,6 +72,7 @@
     "redux-promise-middleware": "^4.2.0",
     "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.64.7",
+    "shortid": "^2.2.8",
     "urlencode": "^1.1.0"
   },
   "scripts": {
