--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -62,6 +62,7 @@
     "morgan": "^1.8.1",
     "open-color": "^1.4.2",
     "path": "^0.12.7",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
