거래처 추가 모달 부분 수정 및 거래처 정보 입력 (중복) 되는 것 수정

--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -58,6 +58,7 @@
     "express-session": "^1.15.1",
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
+    "lodash": "^4.17.4",
     "mongoose": "^4.8.4",
     "morgan": "^1.8.1",
     "open-color": "^1.4.2",
