--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -59,12 +59,14 @@
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.8.4",
     "morgan": "^1.8.1",
     "open-color": "^1.4.2",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
+    "react-datepicker": "^0.55.0",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
