--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -34,7 +34,7 @@
     "jest": "17.0.2",
     "json-loader": "0.5.4",
     "node-sass": "^4.5.0",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.12.1",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
@@ -53,29 +53,30 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.16.0",
-    "express": "^4.14.1",
-    "express-session": "^1.15.1",
+    "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
+    "express": "^4.16.1",
+    "express-session": "^1.15.6",
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "mongoose": "^4.8.4",
-    "morgan": "^1.8.1",
+    "mongoose": "^4.11.14",
+    "morgan": "^1.9.0",
     "open-color": "^1.4.2",
     "path": "^0.12.7",
-    "prop-types": "^15.5.10",
-    "react": "^15.4.2",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.2",
     "react-datepicker": "^0.55.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-router": "^3.2.0",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-logger": "^2.8.1",
     "redux-promise-middleware": "^4.2.0",
-    "semantic-ui-css": "^2.2.4",
-    "semantic-ui-react": "^0.64.7",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.74.2",
     "shortid": "^2.2.8",
     "urlencode": "^1.1.0"
   },
