--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -68,6 +68,7 @@
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-datepicker": "^0.55.0",
+    "react-day-picker": "^7.0.5",
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.2.0",
