Deploy 방법 설정 및 자동설치 파일 생성

--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -84,9 +84,10 @@
     "zingchart-react": "^1.0.6"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "start": "chmod +x INSTALL/start.sh && INSTALL/start.sh"
   },
   "jest": {
     "collectCoverageFrom": [
