아직 베타버젼으로 실행

--- a/daily-frontend/server/deploy.config.json
+++ b/daily-frontend/server/deploy.config.json
@@ -1,7 +1,7 @@
 {
     "apps": [{
         "name": "dailynote",
-        "script" : "./src",
+        "script" : "./scripts/development.js",
         "watch": false,
         "env": {
             "NODE_PATH": "src",
