수정을 해야되는 부분 및 모바일용으로 수정

--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -84,7 +84,7 @@
     "zingchart-react": "^1.0.6"
   },
   "scripts": {
-    "dev": "node scripts/start.js",
+    "start:dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "start": "chmod +x INSTALL/start.sh && INSTALL/start.sh"
