스크롤바 모듈 추가

--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -67,6 +67,7 @@
     "path": "^0.12.7",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^0.55.0",
     "react-day-picker": "^7.0.5",
     "react-dom": "^15.6.2",
