거래처 직전년도 데이터 보기활성화

--- a/daily-frontend/package.json
+++ b/daily-frontend/package.json
@@ -51,6 +51,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "@babel/node": "7.22.6",
     "axios": "^0.15.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
